--- a/styles/style.css
+++ b/styles/style.css
@@ -8,9 +8,12 @@ h1 {
   text-align: center;
 }
 
-.input-container {
-  margin-bottom: 10px;
-  text-align: center;
+.filtros {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 input {
@@ -22,7 +25,6 @@ input {
 table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 20px;
   background: #fff;
 }
 
@@ -33,15 +35,6 @@ th, td {
 
 th {
   background: #eee;
-}
-
-a {
-  color: #0066cc;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
 }
 
 footer {
